load("//bazel/js:exports.bzl", "jest_test", "js_binary", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

js_binary(
    name = "bin",
    data = [
        "index.js",
        "package.json",
        ":node_modules/@monorepo/examples-js-lib",
    ],
    entry_point = "index.js",
)

jest_test(
    name = "test",
    node_modules = "//:node_modules",
    data = [
        ":bin",
        "index.test.js",
    ],
)
