load("@npm//:defs.bzl", "npm_link_all_packages")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")

npm_link_all_packages(name = "node_modules")

npm_package(
    name = "js-lib",
    srcs = [
        "index.js",
        "package.json",
    ],
    out = "pkg",
    visibility = ["//visibility:public"],
)
