load("//bazel/js:exports.bzl", "js_binary", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

ts_project(
    name = "project",
    srcs = ["index.ts"],
    deps = [
        ":node_modules",
    ],
)

js_binary(
    name = "bin",
    data = [
        ":project",
    ],
    entry_point = "index.js",
)
