load("//bazel/image:exports.bzl", "run_image")
load("//bazel/js:exports.bzl", "js_binary", "js_image_layer", "npm_link_all_packages", "ts_project")

npm_link_all_packages(name = "node_modules")

ts_project(
    name = "project",
    srcs = ["index.ts"],
    deps = [
        ":node_modules",
    ],
)

js_binary(
    name = "bin",
    data = [
        ":project",
    ],
    entry_point = "index.js",
)

js_binary(
    name = "dockerbin",
    data = [
        ":project",
    ],
    entry_point = "index.js",
    node_toolchain = "@nodejs_linux_amd64//:node_toolchain",
)

js_image_layer(
    name = "layers",
    binary = ":dockerbin",
    root = "/app",
    visibility = ["//visibility:__pkg__"],
)

run_image(
    name = "ts_own_image",
    tar_path_root = "bazel/js/examples/ts-own-packagejson/",
    cmd = ["/app/bazel/js/examples/ts-own-packagejson/dockerbin"],
    tars = [":layers"],
)
