load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

sh_binary(
    name = "mklib",
    srcs = ["mklib.sh"],
    data = [
        "lib.go",
        "lib_test.go",
    ],
)

go_library(
    name = "lib",
    srcs = ["lib.go"],
    importpath = "monorepo/devx/go/scripts/lib",
    visibility = ["//visibility:public"],
)

go_test(
    name = "lib_test",
    srcs = ["lib_test.go"],
    embed = [":lib"],
)
