load("//devx/go:exports.bzl", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["root.go"],
    importpath = "github.com/publiclabel/monorepo/orgs/examples/go_server/cmd",
    visibility = ["//orgs/examples/go_server:__subpackages__"],
    deps = [
        "//orgs/examples/go_server/internal/rpc",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
    ],
)
