load("//bazel/go:exports.bzl", "go_library")

go_library(
    name = "logger",
    srcs = ["logger.go"],
    importpath = "github.com/publiclabel/monorepo/libs/go/logger",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_rs_zerolog//:zerolog",
        "@com_github_rs_zerolog//log",
        "@com_github_rs_zerolog//pkgerrors",
    ],
)
