load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")

proto_library(
    name = "foo_proto",
    srcs = ["foo.proto"],
    visibility = ["//orgs/examples/go_server:__subpackages__"],
)

go_proto_library(
    name = "foo_go_proto",
    importpath = "monorepo/orgs/examples/go_server/internal/api",
    proto = ":foo_proto",
    visibility = ["//orgs/examples/go_server:__subpackages__"],
)

go_library(
    name = "api",
    srcs = ["main.go"],
    embed = [":foo_go_proto"],
    importpath = "monorepo/orgs/examples/go_server/internal/api",
    visibility = ["//orgs/examples/go_server:__subpackages__"],
    deps = [
        "@com_github_sirupsen_logrus//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
